--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,8 +1,8 @@
-name: Generate Contribution Snake
+name: generate animation
 
 on:
   schedule:
-    - cron: "0 0 * * *"   # daily
+    - cron: "0 0 * * *"
   workflow_dispatch:
   push:
     branches:
@@ -11,19 +11,20 @@ on:
 jobs:
   generate:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
 
     steps:
-      - name: Generate Snake SVG
+      - name: Generate snake animation
         uses: Platane/snk@v3
         with:
           github_user_name: hrithik134
           outputs: |
-            dist/snake.svg
-            dist/snake-dark.svg?palette=github-dark
+            dist/github-contribution-grid-snake.svg
+            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Publish to output branch
+      - name: Push to output branch
         uses: crazy-max/ghaction-github-pages@v3
         with:
           target_branch: output
