--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,33 +1,38 @@
-name: generate animation
+name: Update GitHub Stats
 
 on:
   schedule:
-    - cron: "0 0 * * *"
+    - cron: "0 2 * * 1"   # daily at 02:00 UTC
   workflow_dispatch:
-  push:
-    branches:
-      - main
+
+permissions:
+  contents: write
 
 jobs:
-  generate:
+  generate-stats:
     runs-on: ubuntu-latest
-    timeout-minutes: 10
 
     steps:
-      - name: Generate snake animation
-        uses: Platane/snk@v3
-        with:
-          github_user_name: hrithik134
-          outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-      - name: Push to output branch
-        uses: crazy-max/ghaction-github-pages@v3
-        with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Create assets directory
+        run: mkdir -p assets
+
+      - name: Generate contribution streak
+        run: |
+          curl -o assets/streak.svg \
+          "https://streak-stats.demolab.com?user=hrithik134&theme=dark&hide_border=true"
+
+      - name: Generate top languages
+        run: |
+          curl -o assets/top-langs.svg \
+          "https://github-readme-stats.vercel.app/api/top-langs/?username=hrithik134&layout=compact&theme=dark"
+
+      - name: Commit and push changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add assets/
+          git commit -m "chore: update GitHub stats" || exit 0
+          git push
